# sing-dae

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: pages.yml  release.yml  test.yaml
assets/: absx.dae  config.json  direct_group_conflict.dae
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  prism-dae.ts  prism.ts
src/: comment_defaults.rs  error.rs  lib.rs  main.rs
src/convert/: dae_to_sing.rs  dns_utils.rs  mod.rs  protocol.rs  sing_to_dae.rs
src/dae/: ast.rs  dae.pest  mod.rs  parser.rs  serializer.rs
src/singbox/: config.rs  jsonc.rs  mod.rs
tests/: conversion.rs  dae_parser.rs  dae_roundtrip.rs  no_duplicate_tags.rs  singbox_roundtrip.rs
