[package]
edition = "2024"
name    = "sing-dae"
version = "0.1.0"

[dependencies]
pest         = "2"
pest_derive  = "2"
regex-lite   = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
