[package]
authors     = ["lxl66566"]
categories  = ["command-line-utilities"]
description = "Config converter between dae and sing-box"
edition     = "2024"
keywords    = ["dae", "sing-box", "proxy", "converter", "wasm"]
license     = "MIT"
name        = "sing-dae"
readme      = "README.md"
repository  = "https://github.com/lxl66566/sing-dae"
version     = "0.1.0"


[features]
comment-defaults = []
default          = ["comment-defaults"]

[dependencies]
pest         = "2"
pest_derive  = "2"
regex-lite   = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
